# FL-studio-EQ

./: .gitignore  README.md  package-lock.json  package.json
Task + Implenmentasi Histori/: implementation_plan 1  task 1  walkthrough 1
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: commands.rs  engine.rs  eq.rs  mod.rs  state.rs  synth.rs
src-tauri/src/audio/fx/: chorus.rs  compressor.rs  delay.rs  distort.rs  flanger.rs  mod.rs  reverb.rs
ui/: index.html
